--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,8 +7,8 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Build and Deploy
-      env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      run:
-        echo $ACCESS_TOKEN
+     - name: Build and Deploy
+       env:
+         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+       run: |
+         echo $ACCESS_TOKEN
